syntax = "proto3";

option go_package = "pkg/grpc";

package gacha;

import "proto/rarity.proto";

service GachaService {
  rpc Draw(DrawRequest) returns (DrawResponse) {}
}

message DrawRequest {
  int64 user_id = 1;
}

message DrawResponse {
  int64  item_id   = 1;
  string item_name = 2;
  rarity.Rarity rarity    = 3;
}
